[package]
name = "atomr-persistence-query-inmemory"
description = "In-memory read journal for atomr-persistence-query."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-persistence-query-inmemory"
keywords = ["actor", "event-sourcing", "in-memory"]
categories = ["database", "concurrency"]

[dependencies]
atomr-persistence = { workspace = true }
atomr-persistence-query = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
