[package]
name = "atomr-persistence-query"
description = "Tagged event-stream queries over atomr journals."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-persistence-query"
keywords = ["actor", "event-sourcing", "query"]
categories = ["database", "concurrency"]

[dependencies]
atomr-persistence = { workspace = true }
atomr-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
