[package]
name = "atomr-persistence-redis"
description = "Redis journal and snapshot store for atomr — sorted-set journal, hash snapshots, transactional batches."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-persistence-redis"
keywords = ["actor", "event-sourcing", "redis"]
categories = ["database", "concurrency"]

[features]
default = []
integration = []

[dependencies]
atomr-persistence = { workspace = true }
atomr-persistence-query = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
fred = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
atomr-persistence-tck = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
