[package]
name = "atomr-persistence-tck"
description = "Conformance test suite for atomr-persistence journal and snapshot implementations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-persistence-tck"
keywords = ["actor", "event-sourcing", "testing"]
categories = ["development-tools::testing", "database"]

[dependencies]
atomr-persistence = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
