[package]
name = "atomr-serialization-hyperion"
description = "Serde / bincode serializer shim for atomr, kept for layout symmetry."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-serialization-hyperion"
keywords = ["actor", "serialization", "bincode"]
categories = ["encoding", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
