[package]
name = "atomr-telemetry"
description = "Tracing, metrics, and exporter probes for atomr — actors, dead letters, cluster, sharding, persistence, remote, streams, and distributed data."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-telemetry"
keywords = ["actor", "telemetry", "metrics", "tracing", "observability"]
categories = ["development-tools::profiling", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
atomr-cluster = { workspace = true, optional = true }
atomr-cluster-sharding = { workspace = true, optional = true }
atomr-cluster-metrics = { workspace = true, optional = true }
atomr-persistence = { workspace = true, optional = true }
atomr-remote = { workspace = true, optional = true }
atomr-streams = { workspace = true, optional = true }
atomr-distributed-data = { workspace = true, optional = true }
atomr-config = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Prometheus exporter (opt-in)
prometheus = { version = "0.13", optional = true, default-features = false }

# OpenTelemetry exporter (opt-in)
opentelemetry = { version = "0.24", optional = true, default-features = false, features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.24", optional = true, default-features = false, features = ["metrics", "trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.17", optional = true, default-features = false, features = ["metrics", "trace"] }
opentelemetry-stdout = { version = "0.5", optional = true, default-features = false, features = ["metrics", "trace"] }

[features]
default = ["cluster", "persistence", "remote", "streams", "ddata", "sharding", "cluster-metrics"]

# Which atomr subsystems this crate probes.
cluster = ["dep:atomr-cluster"]
sharding = ["dep:atomr-cluster-sharding"]
cluster-metrics = ["dep:atomr-cluster-metrics"]
persistence = ["dep:atomr-persistence"]
remote = ["dep:atomr-remote"]
streams = ["dep:atomr-streams"]
ddata = ["dep:atomr-distributed-data"]

# Exporters (disabled by default, pulled in by dashboard features).
prometheus = ["dep:prometheus"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk"]
otel-otlp-grpc = ["otel", "dep:opentelemetry-otlp", "opentelemetry-otlp/grpc-tonic"]
otel-otlp-http = ["otel", "dep:opentelemetry-otlp", "opentelemetry-otlp/http-proto", "opentelemetry-otlp/reqwest-client"]
otel-stdout = ["otel", "dep:opentelemetry-stdout"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
toml = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
